# python2-trepan

./: .cvsignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES.txt  ChangeLog  MANIFEST.in  Makefile  Makefile.am  NEWS  NEWS.md  README.md  README.rst  README.txt  VERSION  __pkginfo__.py  appveyor.yml  autogen.sh  circle.yml  configure.ac  pydbg.ChangeLog  requirements-dev.txt  requirements.txt  rst2html.py  setup.py  src_obj_check.py  svn-commit.tmp  svn2cl_usermap  tox.ini  version.m4.in
.circleci/: config.yml
PYTHONSTARTUP/: pythonrc
admin-tools/: checkout_common.sh  how-to-make-a-release.md  how-to-make-a-release.txt  make-dist-newer.sh  make-dist-older.sh  merge-for-2.4.sh  pyenv-newer-versions  setup-master.sh  setup-python-2.4.sh
celery/: ctrepan.py  trepan.py
doc-convert/: toRsT.py
docs/: Makefile  breakpoints.rst  commands.rst  conf.py  data.rst  entry-exit.rst  features.rst  files.rst  index.rst  install.rst  manpages.rst  overview.rst  running.rst  support.rst  syntax.rst
docs/_build/: .gitignore
docs/commands/: breakpoints.rst  data.rst  files.rst  info.rst  running.rst  set.rst  show.rst  status.rst  support.rst
docs/manpages/: trepan2.rst  trepan2c.rst  trepan3k.rst  trepan3kc.rst
docs/syntax/: arange.rst  command.rst  examples.rst  filename.rst  location.rst  range.rst  suffixes.rst
emacs/: .cvsignore  Makefile.am  pydbg-test.el  pydbg.el  pydbgr.el  test-pydbgr.el
ipython/: ipy_pydbgr.py
pydbg/: __init__.py  api.py  client.py  clifns.py  debugger.py  post_mortem.py
pydbg/interface/: script.py
pydbg/io/: __init__.py  base_io.py  fifoclient.py  input.py  scriptin.py  stringarray.py  tcpclient.py  tcpserver.py
pydbg/lib/: __init__.py  breakpoint.py  bytecode.py  display.py  file.py  stack.py  thread.py
pydbg/processor/: base_proc.py  cmdproc.py  trace.py
pydbgr/: VERSION.py  __init__.py  api.py  bwcli.py  cli.py  client.py  clifns.py  debugger.py  except.py  interface.py  misc.py  options.py  post_mortem.py  vprocessor.py
pydbgr/bwprocessor/: __init__.py  location.py  main.py  msg.py
pydbgr/interface/: __init__.py  base_intf.py  client.py  comcodes.py  script.py  server.py  user.py
pydbgr/interfaces/: .gitignore  bullwinkle.py  client.py  script.py  server.py  user.py
pydbgr/io/: base.py  base_io.py  dbg_input.py  fifoclient.py  fifoserver.py  input.py  output.py  scriptin.py  stringarray.py  tcpclient.py  tcpserver.py
pydbgr/lib/: __init__.py  breakpoint.py  bytecode.py  core.py  default.py  disassemble.py  display.py  eval.py  file.py  format.py  pp.py  print.py  sighandler.py  stack.py
pydbgr/processor/: base_proc.py  cmdbreak.py  cmdfns.py  cmdproc.py  complete.py  subcmd.py  trace.py
test/: notyet-test-set-trace-sub.py
test/data/: highlight-pypy.right  highlight.cmd  highlight.right  macro-2.4.right  macro-2.5.right  macro-pypy.right  macro.cmd  macro.right  noscript-pypy.right  noscript.right  step-pypy.right  step.right
test/example/: .gitignore  bgthread.py  eval.py  expr.py  expr2.py  fib-exec.py  fib.py  gcd-dbgcall.py  gcd.py  hanoi.py  q-dbgcall.py  q.py  sigtest.py  threading_urls.py  tlock.py  twocall.py
test/functional/: .gitignore  Makefile  fn_helper.py  setup.py  test-break.py  test-finish.py  test-jump.py  test-next.py  test-sig.py  test-skip.py  test-step.py
test/unit/: Makefile  (+46 more)
tmp/: restart.py
trepan/: VERSION.py  __init__.py  __main__.py  api.py  bwcli.py  cli.py  client.py  clifns.py  debugger.py  exception.py  interface.py  misc.py  options.py  post_mortem.py  version.py  vprocessor.py
(+511 files in other folders)
